2011-09-17    <aheit@MALFOY>

	* all: released version 0.7
	* libcandbc: fixed DBC parser to allow for an empty symbol section
	(thanks, Steven!)

2011-06-18    <aheit@MALFOY>

	* all: released version 0.6
	* libcanasc: fixed bit indexing in little endian signal decoder

2011-02-20    <aheit@MALFOY>

	* all: updated matio to version 1.3.4
	* all: updated autoconf toolchain
	* dbcls: displaying full data of signal record
	* dbcls: changed output to CSV format with header line

2010-10-24    <aheit@gollum>

	* added J1939 message processing (29 bit single-wire CAN)

2009-04-18    <aheit@gollum>

	* all: released version 0.5
	* all: added GPLv3 license ('COPYING')
	* config: provided strtok_r source for MSYS/MinGW compatibility
	* asctomat: replaced usage of system timespec structure for
	  MSYS/MinGW compatibility

2009-02-22    <aheit@gollum>

	* all: fixed compiler warnings

2009-02-15    <aheit@gollum>

	* all: released version 0.4
	* config: fixed parser table dependency

2009-02-13    <aheit@gollum>

	* asctomat: new option -t for specification of the time resolution
	* libcanasc: fixed atof() prototype by including stdlib.h

2009-02-01    <aheit@gollum>

	* all: released version 0.3
	* libcanasc: corrected signedness of work_byte variable

2009-01-17    <aheit@gollum>

	* libcandbc: using double data type for all floating point values
	* libcandbc: implemented parsing and serializing of VAL_TABLE
	* config: selective linking of libmatio

2009-01-10    <aheit@gollum>

	* all: released version 0.2
	* config: check for matio added
	* config: removed default -d flags for lex & yacc

2009-01-09    <aheit@gollum>

	* asctomat: fixed warning on strdup protype
	* libcandbc: fixed include filename in dbcReader.h and dbcWriter.h

2009-01-06    <aheit@gollum>

	* libcandbc: renamed some structure elements to increase consistency
	* libcandbc: changed parsing of all lists to right-recursive
          parsing. This will give us the correct element order when forming