@@ -381,36 +381,36 @@ struct yy_trans_info
 	flex_int32_t yy_verify;
 	flex_int32_t yy_nxt;
 	};
-static yyconst flex_int16_t yy_accept[261] =
+static yyconst flex_int16_t yy_accept[260] =
     {   0,
         0,    0,   62,   60,   43,   42,   42,   60,   58,   59,
        54,   52,   55,   46,   46,   49,   50,   53,   44,   44,
        44,   44,   44,   44,   44,   44,   44,   44,   44,   56,
        57,   51,   43,    0,   45,    0,   46,    0,    0,    0,
-       44,    0,   44,   44,   44,   44,   44,   44,   44,   44,
        44,   44,   44,   44,   44,   44,   44,   44,   44,   44,
-       44,   48,    0,   48,   47,   17,    2,    3,    4,   44,
-       15,   44,   44,   44,    6,   44,   44,   13,    9,    8,
-       44,    5,   44,   44,   44,   44,   44,   44,   44,   44,
-       44,   44,   44,   20,   44,   12,   44,   44,   44,   44,
-
-       44,   44,   44,   44,    0,   44,   18,   44,   44,   44,
        44,   44,   44,   44,   44,   44,   44,   44,   44,   44,
-       10,   44,   44,   44,   44,   44,   44,   44,   44,   44,
-       44,   44,   44,   44,    0,    0,    0,    0,   44,    0,
-       44,   44,   21,   44,   44,   44,   44,   44,   44,   44,
-       11,   44,   44,   16,   35,   44,   44,   44,   44,   44,
-       44,   44,    0,   44,   44,   25,    0,   44,   44,   44,
-       44,   44,    1,   44,   44,   44,   44,   44,   44,   44,
-       44,   19,   44,   44,   23,   14,   44,   44,    0,   44,
-       44,   44,   44,   44,   44,   44,   44,   33,   44,   44,
+       48,    0,   48,   47,   17,    2,    3,    4,   44,   15,
+       44,   44,   44,    6,   44,   44,   13,    9,    8,   44,
+        5,   44,   44,   44,   44,   44,   44,   44,   44,   44,
+       44,   44,   20,   44,   12,   44,   44,   44,   44,   44,
 
-       44,   44,   44,   44,   44,   44,   44,    0,   44,   44,
-       44,   44,   44,   28,   39,   38,   37,   44,   44,   44,
-       44,   44,   31,   44,   44,   30,   22,   34,   44,    0,
-       44,   26,   40,   44,   44,   44,   44,   44,   44,   24,
-       44,   44,    7,   44,   44,   44,   44,   29,   44,   27,
-       44,   44,   36,   44,   44,   44,   32,   44,   41,    0
+       44,   44,   44,   44,   44,   18,   44,   44,   44,   44,
+       44,   44,   44,   44,   44,   44,   44,   44,   44,   10,
+       44,   44,   44,   44,   44,   44,   44,   44,   44,   44,
+       44,   44,   44,   44,   44,   44,   44,   44,   44,   44,
+       44,   21,   44,   44,   44,   44,   44,   44,   44,   11,
+       44,   44,   16,   35,   44,   44,   44,   44,   44,   44,
+       44,   44,   44,   44,   25,   44,   44,   44,   44,   44,
+       44,    1,   44,   44,   44,   44,   44,   44,   44,   44,
+       19,   44,   44,   23,   14,   44,   44,   44,   44,   44,
+       44,   44,   44,   44,   44,   44,   33,   44,   44,   44,
+
+       44,   44,   44,   44,   44,   44,   44,   44,   44,   44,
+       44,   44,   28,   39,   38,   37,   44,   44,   44,   44,
+       44,   31,   44,   44,   30,   22,   34,   44,   44,   44,
+       26,   40,   44,   44,   44,   44,   44,   44,   24,   44,
+       44,    7,   44,   44,   44,   44,   29,   44,   27,   44,
+       44,   36,   44,   44,   44,   32,   44,   41,    0
     } ;
 
 static yyconst flex_int32_t yy_ec[256] =
@@ -454,73 +454,73 @@ static yyconst flex_int32_t yy_meta[48] =
         1,    1,    3,    2,    2,    3,    1
     } ;
 
-static yyconst flex_int16_t yy_base[264] =
+static yyconst flex_int16_t yy_base[263] =
     {   0,
-        0,    0,  501,  502,  498,  502,  502,   43,  502,  502,
-       37,  502,   40,   44,   48,  502,  502,  502,  456,   45,
-       49,   28,   43,   57,   52,   39,   34,   70,   69,  502,
-      502,  502,  496,   60,  502,  494,   95,   85,  106,    0,
-      453,  452,  451,  450,  449,  448,   67,  447,   82,   85,
-      446,   87,   92,   86,   91,  445,   96,  103,   99,  105,
-      104,  131,  137,  142,    0,  131,  123,  444,  138,  443,
-      442,  130,  132,  125,  120,  134,  149,  441,  440,  150,
-      139,  141,  144,  154,  439,  151,  161,  164,  165,  152,
-      157,  159,  167,  177,  160,  438,  183,  187,  184,  174,
+        0,    0,  319,  320,  316,  320,  320,   43,  320,  320,
+       37,  320,   40,   44,   48,  320,  320,  320,    0,   45,
+       46,  281,   35,   41,  294,  285,  280,   47,   56,  320,
+      320,  320,  311,   63,  320,  309,   74,   85,   93,    0,
+        0,  268,  267,  266,  265,  272,  263,  276,   55,  261,
+      275,  271,  263,  265,  256,   59,  274,  264,  268,  262,
+       96,   99,  102,    0,   96,  259,    0,   61,  250,    0,
+      263,  262,  253,  268,  253,  269,    0,    0,  265,  246,
+      255,   85,  257,  239,  247,  258,  257,  254,  239,  245,
+      238,  250,  252,  233,    0,  253,  252,  247,  233,  245,
 
-      189,  180,  178,  176,  194,  192,  181,  199,  190,  200,
-      201,  437,  436,  435,  434,  212,  433,  205,  204,  207,
-      432,  211,  219,  218,  217,  220,  213,  233,  234,  239,
-      228,  431,  430,  225,  246,  236,  237,  240,  243,  242,
-      429,  249,  428,  254,  427,  426,  253,  247,  252,  259,
-      425,  262,  258,  270,  424,  266,  257,  272,  277,  284,
-      423,  276,  287,  422,  421,  273,  274,  420,  278,  290,
-      283,  294,  419,  301,  302,  304,  303,  418,  306,  307,
-      308,  417,  310,  311,  416,  415,  314,  320,  305,  309,
-      414,  300,  318,  332,  328,  323,  413,  412,  411,  410,
+      234,  229,  225,   97,  233,  227,  235,  237,  231,  223,
+      214,  213,  212,  211,  231,  209,  218,  215,  216,    0,
+      214,  225,  218,  213,  211,  204,  224,  217,  222,  208,
+      195,  194,  197,  216,  201,  200,  199,  208,  200,  186,
+      210,    0,  207,  183,  182,  202,  192,  190,  193,    0,
+      201,  189,  102,    0,  186,  181,  194,  193,  192,  170,
+      181,  190,  167,  166,  171,  170,  163,  169,  182,  168,
+      174,    0,  179,  178,  175,  176,  154,  168,  167,  166,
+        0,  172,  174,    0,    0,  173,  172,  152,  156,  144,
+      147,  163,  161,  155,  147,  138,    0,  137,  136,  135,
 
-      403,  337,  325,  334,  336,  347,  402,  339,  335,  401,
-      400,  399,  330,  398,  397,  396,  395,  394,  352,  393,
-      392,  346,  391,  354,  359,  390,  350,  389,  353,  349,
-      388,  387,  386,  356,  361,  385,  365,  366,  372,  383,
-      362,  382,  381,  370,  379,  380,  371,  377,  369,   95,
-      375,  384,   93,  376,   61,  378,   60,  404,   32,  502,
-      447,  449,   70
+      155,  141,  147,  146,  155,  129,  138,  138,  126,  125,
+      124,  127,    0,    0,    0,    0,  122,  146,  120,  119,
+      133,    0,  138,  137,    0,  125,    0,  125,  119,  112,
+        0,    0,  119,  130,  109,  129,  128,  127,    0,  109,
+      104,    0,  112,   96,  118,  105,    0,   90,    0,   96,
+      105,    0,   95,   79,   67,    0,  112,    0,  320,  141,
+      143,   75
     } ;
 
-static yyconst flex_int16_t yy_def[264] =
+static yyconst flex_int16_t yy_def[263] =
     {   0,
-      260,    1,  260,  260,  260,  260,  260,  261,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  260,
-      260,  260,  260,  261,  260,  261,  260,  260,  260,  263,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  260,  260,  260,  263,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
+      259,    1,  259,  259,  259,  259,  259,  260,  259,  259,
+      259,  259,  259,  259,  259,  259,  259,  259,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  259,
+      259,  259,  259,  260,  259,  260,  259,  259,  259,  262,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      259,  259,  259,  262,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
 
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
 
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,  262,
-      262,  262,  262,  262,  262,  262,  262,  262,  262,    0,
-      260,  260,  260
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,  261,  261,
+      261,  261,  261,  261,  261,  261,  261,  261,    0,  259,
+      259,  259
     } ;
 
-static yyconst flex_int16_t yy_nxt[550] =
+static yyconst flex_int16_t yy_nxt[368] =
     {   0,
         4,    5,    6,    7,    8,    9,   10,   11,   12,   13,
         4,   14,   15,   15,   16,   17,   18,   19,   20,   21,
@@ -528,63 +528,43 @@ static yyconst flex_int16_t yy_nxt[550] =
        19,   19,   19,   28,   19,   19,   29,   19,   19,   30,
         4,   31,   19,   19,   19,   19,   32,   35,   37,   37,
        37,   37,   37,   37,   38,   37,   37,   37,   38,   37,
-       37,   37,   43,   49,   35,   39,   47,   56,   55,   39,
-       42,   65,   50,   54,   42,   44,   42,   48,   45,   51,
-       46,   42,   52,   36,   53,   42,   60,   42,   39,   40,
-       61,   42,   39,   57,   42,   58,   62,   62,   62,   42,
+       37,   37,   42,   46,   49,   39,   51,   35,   52,   39,
+       56,   50,   57,   59,   47,   43,   64,   60,   44,   90,
+       45,   58,   91,   36,   38,   37,   37,   37,   39,   40,
+       72,   73,   39,   80,   92,   39,   61,   61,   61,  257,
 
-       36,   70,   42,  257,   59,   38,   37,   37,   37,   42,
-       72,   42,   42,   63,   76,   63,   39,   64,   64,   64,
-       73,   74,   77,   78,   42,   79,   83,   42,   42,   42,
-       81,   84,   85,   42,   42,   42,   86,   42,   82,   39,
-       98,   42,   62,   62,   62,   42,   42,   42,   64,   64,
-       64,   87,   39,   64,   64,   64,   91,   90,   95,   92,
-       96,   97,   42,   88,   89,   42,  100,   42,   99,  103,
-      101,   93,   42,   42,   42,   39,   42,  102,  104,  106,
-       42,   42,  109,   42,  108,  110,  105,  113,  111,  112,
-      115,   42,   42,   42,   42,  114,   42,  116,  117,   42,
+       62,   81,   62,   36,   63,   63,   63,   61,   61,   61,
+       63,   63,   63,   63,   63,   63,   86,   39,   39,  103,
+      125,  256,  173,  258,  258,  255,  254,  104,   87,   88,
+      253,  126,  252,  127,  174,  175,  251,  250,  249,  248,
+       39,   34,   34,   34,   41,   41,  247,  246,  245,  244,
+      243,  242,  241,  240,  239,  238,  237,  236,  235,  234,
+      233,  232,  231,  230,  229,  228,  227,  226,  225,  224,
+      223,  222,  221,  220,  219,  218,  217,  216,  215,  214,
+      213,  212,  211,  210,  209,  208,  207,  206,  205,  204,
+      203,  202,  201,  200,  199,  198,  197,  196,  195,  194,
 
-      118,   42,   42,   42,  119,  120,   42,   42,  121,   42,
-      122,  123,  132,  124,  125,  130,   42,  126,   42,   42,
-       42,  129,   42,   42,  131,   42,   42,  133,  127,   42,
-      128,   42,   42,  139,   42,  134,   42,  141,  142,  143,
-      145,   42,   42,   42,  144,  146,   42,   42,  147,   42,
-      150,  149,  148,   42,   42,   42,  152,  151,  153,   42,
-       42,   42,   42,  156,  157,  161,  164,   42,  158,  159,
-       42,  162,  160,  165,  168,   42,   42,  169,   42,   42,
-      172,   42,   42,  170,   42,   42,  171,  173,   42,   42,
-      174,   42,  178,  179,   42,   42,   42,  177,  180,   42,
+      193,  192,  191,  190,  189,  188,  187,  186,  185,  184,
+      183,  182,  181,  180,  179,  178,  177,  176,  172,  171,
+      170,  169,  168,  167,  166,  165,  164,  163,  162,  161,
+      160,  159,  158,  157,  156,  155,  154,  153,  152,  151,
+      150,  149,  148,  147,  146,  145,  144,  143,  142,  141,
+      140,  139,  138,  137,  136,  135,  134,  133,  132,  131,
+      130,  129,  128,  124,  123,  122,  121,  120,  119,  118,
+      117,  116,  115,  114,  113,  112,  111,  110,  109,  108,
+      107,  106,  105,  102,  101,  100,   99,   98,   97,   96,
+       95,   94,   93,   89,   85,   84,   83,   82,   79,   78,
 
-       42,   42,  175,  176,   42,  181,  183,  184,   42,  187,
-      188,  191,   42,  190,   42,   42,   42,  192,   42,   42,
-       42,  193,  194,  195,  197,   42,   42,  196,  203,   42,
-      202,  204,   42,  199,  200,  201,   42,  205,  209,  210,
-      207,  206,   42,   42,   42,   42,   42,   42,   42,   42,
-       42,   42,   42,   42,  211,  212,   42,  213,  218,  219,
-       42,  220,   42,  221,  222,   42,  225,   42,  229,  231,
-       42,  224,   42,  234,   42,  235,   42,   42,   42,   42,
-      236,   42,  237,  242,  238,  239,  244,  245,   42,   42,
-      241,   42,   42,  246,   42,   42,   42,  249,   42,  251,
-
-      247,   42,  252,   42,   42,  255,  256,   42,   42,  254,
-      258,  253,   42,   42,   42,  259,  259,   42,   42,   42,
-       42,  250,   42,   42,  248,   42,   42,  243,   42,   42,
-      240,   42,   42,   42,  233,  232,  230,   42,   42,   42,
-       42,  228,  227,  226,  223,  217,   42,   34,   34,   34,
-       41,   41,  216,  215,   42,  214,  208,   42,   42,   42,
-      198,   42,  189,  186,  185,  182,   42,   42,  167,  166,
-       42,  163,  155,  154,   42,  140,  138,  137,  136,  135,
-       42,  107,   42,   42,   42,   94,   42,   80,   75,   71,
-       69,   68,   67,   66,   42,   42,  260,   33,   42,   33,
-
-      260,    3,  260,  260,  260,  260,  260,  260,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  260
+       77,   76,   75,   74,   71,   70,   69,   68,   67,   66,
+       65,  259,   33,   55,   54,   53,   48,   33,  259,    3,
+      259,  259,  259,  259,  259,  259,  259,  259,  259,  259,
+      259,  259,  259,  259,  259,  259,  259,  259,  259,  259,
+      259,  259,  259,  259,  259,  259,  259,  259,  259,  259,
+      259,  259,  259,  259,  259,  259,  259,  259,  259,  259,
+      259,  259,  259,  259,  259,  259,  259
     } ;
 
-static yyconst flex_int16_t yy_chk[550] =
+static yyconst flex_int16_t yy_chk[368] =
     {   0,
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
@@ -592,60 +572,40 @@ static yyconst flex_int16_t yy_chk[550] =
         1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
         1,    1,    1,    1,    1,    1,    1,    8,   11,   11,
        11,   13,   13,   13,   14,   14,   14,   14,   15,   15,
-       15,   15,   20,   22,   34,   14,   21,   27,   26,   15,
-       22,  263,   23,   25,  259,   20,   27,   21,   20,   23,
-       20,   26,   24,    8,   24,   23,   29,   20,   14,   14,
-       29,   21,   15,   28,   25,   28,   38,   38,   38,   24,
+       15,   15,   20,   21,   23,   14,   24,   34,   24,   15,
+       28,   23,   28,   29,   21,   20,  262,   29,   20,   68,
+       20,   28,   68,    8,   37,   37,   37,   37,   14,   14,
+       49,   49,   15,   56,   68,   37,   38,   38,   38,  255,
 
-       34,   47,  257,  255,   28,   37,   37,   37,   37,   47,
-       49,   29,   28,   39,   52,   39,   37,   39,   39,   39,
-       50,   50,   53,   54,   49,   55,   58,   50,   54,   52,
-       57,   59,   60,   55,   53,  253,   61,  250,   57,   37,
-       75,   59,   62,   62,   62,   58,   61,   60,   63,   63,
-       63,   66,   62,   64,   64,   64,   69,   67,   72,   69,
-       73,   74,   75,   66,   66,   67,   77,   74,   76,   82,
-       80,   69,   72,   66,   73,   62,   76,   81,   83,   84,
-       69,   81,   87,   82,   86,   88,   83,   91,   89,   90,
-       93,   77,   80,   86,   90,   92,   84,   94,   95,   91,
+       39,   56,   39,   34,   39,   39,   39,   61,   61,   61,
+       62,   62,   62,   63,   63,   63,   65,   61,   37,   82,
+      104,  254,  153,  257,  257,  253,  251,   82,   65,   65,
+      250,  104,  248,  104,  153,  153,  246,  245,  244,  243,
+       61,  260,  260,  260,  261,  261,  241,  240,  238,  237,
+      236,  235,  234,  233,  230,  229,  228,  226,  224,  223,
+      221,  220,  219,  218,  217,  212,  211,  210,  209,  208,
+      207,  206,  205,  204,  203,  202,  201,  200,  199,  198,
+      196,  195,  194,  193,  192,  191,  190,  189,  188,  187,
+      186,  183,  182,  180,  179,  178,  177,  176,  175,  174,
 
-       97,   92,   95,   87,   98,   99,   88,   89,  100,   93,
-      101,  102,  109,  103,  104,  107,  100,  105,  104,   94,
-      103,  106,  102,  107,  108,   97,   99,  110,  105,   98,
-      105,  101,  109,  116,  106,  111,  105,  118,  119,  120,
-      123,  108,  110,  111,  122,  124,  119,  118,  125,  120,
-      128,  127,  126,  122,  116,  127,  130,  129,  131,  125,
-      124,  123,  126,  134,  135,  139,  142,  134,  136,  137,
-      131,  140,  138,  144,  147,  128,  129,  148,  136,  137,
-      152,  130,  138,  149,  140,  139,  150,  153,  135,  148,
-      154,  142,  157,  158,  149,  147,  144,  156,  159,  157,
+      173,  171,  170,  169,  168,  167,  166,  165,  164,  163,
+      162,  161,  160,  159,  158,  157,  156,  155,  152,  151,
+      149,  148,  147,  146,  145,  144,  143,  141,  140,  139,
+      138,  137,  136,  135,  134,  133,  132,  131,  130,  129,
+      128,  127,  126,  125,  124,  123,  122,  121,  119,  118,
+      117,  116,  115,  114,  113,  112,  111,  110,  109,  108,
+      107,  106,  105,  103,  102,  101,  100,   99,   98,   97,
+       96,   94,   93,   92,   91,   90,   89,   88,   87,   86,
+       85,   84,   83,   81,   80,   79,   76,   75,   74,   73,
+       72,   71,   69,   66,   60,   59,   58,   57,   55,   54,
 
-      153,  150,  154,  154,  152,  160,  162,  163,  156,  166,
-      167,  170,  154,  169,  158,  166,  167,  171,  162,  159,
-      169,  172,  174,  175,  177,  171,  160,  176,  184,  163,
-      183,  187,  170,  179,  180,  181,  172,  188,  192,  193,
-      190,  189,  192,  174,  175,  177,  176,  189,  179,  180,
-      181,  190,  183,  184,  194,  195,  187,  196,  202,  203,
-      193,  204,  188,  205,  206,  196,  209,  203,  213,  219,
-      195,  208,  213,  222,  194,  224,  204,  209,  205,  202,
-      225,  208,  227,  235,  229,  230,  237,  238,  222,  206,
-      234,  230,  227,  239,  219,  229,  224,  244,  234,  246,
-
-      241,  225,  247,  235,  241,  252,  254,  237,  238,  251,
-      256,  249,  244,  247,  239,  258,  258,  251,  254,  248,
-      256,  245,  246,  243,  242,  240,  252,  236,  233,  232,
-      231,  228,  226,  223,  221,  220,  218,  217,  216,  215,
-      214,  212,  211,  210,  207,  201,  258,  261,  261,  261,
-      262,  262,  200,  199,  198,  197,  191,  186,  185,  182,
-      178,  173,  168,  165,  164,  161,  155,  151,  146,  145,
-      143,  141,  133,  132,  121,  117,  115,  114,  113,  112,
-       96,   85,   79,   78,   71,   70,   68,   56,   51,   48,
-       46,   45,   44,   43,   42,   41,   36,   33,   19,    5,
-
-        3,  260,  260,  260,  260,  260,  260,  260,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  260,  260,
-      260,  260,  260,  260,  260,  260,  260,  260,  260
+       53,   52,   51,   50,   48,   47,   46,   45,   44,   43,
+       42,   36,   33,   27,   26,   25,   22,    5,    3,  259,
+      259,  259,  259,  259,  259,  259,  259,  259,  259,  259,
+      259,  259,  259,  259,  259,  259,  259,  259,  259,  259,
+      259,  259,  259,  259,  259,  259,  259,  259,  259,  259,
+      259,  259,  259,  259,  259,  259,  259,  259,  259,  259,
+      259,  259,  259,  259,  259,  259,  259
     } ;
 
 /* Table of booleans, true if rule could match eol. */
@@ -693,7 +653,7 @@ char *yytext;
 #include <stdio.h>
 #include <string.h>
 
-#line 697 "src/libcandbc/lexer.c"
+#line 657 "src/libcandbc/lexer.c"
 
 #define INITIAL 0
 
@@ -878,7 +838,7 @@ YY_DECL
 #line 36 "lexer.l"
 
 
-#line 882 "src/libcandbc/lexer.c"
+#line 842 "src/libcandbc/lexer.c"
 
 	if ( !(yy_init) )
 		{
@@ -931,13 +891,13 @@ yy_match:
 			while ( yy_chk[yy_base[yy_current_state] + yy_c] != yy_current_state )
 				{
 				yy_current_state = (int) yy_def[yy_current_state];
-				if ( yy_current_state >= 261 )
+				if ( yy_current_state >= 260 )
 					yy_c = yy_meta[(unsigned int) yy_c];
 				}
 			yy_current_state = yy_nxt[yy_base[yy_current_state] + (unsigned int) yy_c];
 			++yy_cp;
 			}
-		while ( yy_base[yy_current_state] != 502 );
+		while ( yy_base[yy_current_state] != 320 );
 
 yy_find_action:
 		yy_act = yy_accept[yy_current_state];
@@ -1307,7 +1267,7 @@ YY_RULE_SETUP
 #line 134 "lexer.l"
 ECHO;
 	YY_BREAK
-#line 1311 "src/libcandbc/lexer.c"
+#line 1271 "src/libcandbc/lexer.c"
 
 	case YY_END_OF_BUFFER:
 		{
@@ -1597,7 +1557,7 @@ static int yy_get_next_buffer (void)
 		while ( yy_chk[yy_base[yy_current_state] + yy_c] != yy_current_state )
 			{
 			yy_current_state = (int) yy_def[yy_current_state];
-			if ( yy_current_state >= 261 )
+			if ( yy_current_state >= 260 )
 				yy_c = yy_meta[(unsigned int) yy_c];
 			}
 		yy_current_state = yy_nxt[yy_base[yy_current_state] + (unsigned int) yy_c];
@@ -1625,11 +1585,11 @@ static int yy_get_next_buffer (void)
 	while ( yy_chk[yy_base[yy_current_state] + yy_c] != yy_current_state )
 		{
 		yy_current_state = (int) yy_def[yy_current_state];
-		if ( yy_current_state >= 261 )
+		if ( yy_current_state >= 260 )
 			yy_c = yy_meta[(unsigned int) yy_c];
 		}
 	yy_current_state = yy_nxt[yy_base[yy_current_state] + (unsigned int) yy_c];
-	yy_is_jam = (yy_current_state == 260);
+	yy_is_jam = (yy_current_state == 259);
 
 	return yy_is_jam ? 0 : yy_current_state;
 }
